# whoisfakehacker

./: .gitignore  .testr.conf  README.md  requirements.txt  scrapy.cfg  setup.cfg  test-requirements.txt  tox.ini
whoisfakehacker/: items.py  pipelines.py  settings.py
whoisfakehacker/spiders/: olb.py
