[metadata]
name = whoisfakehacker
summary = whoisfakehacker
description-file =
    README.md
author = zhangguoqing
author-email = zhangguoqingas@gmail.com
home-page = http://blog.sina.com.cn/aszhangguoqing
classifier =
    Environment :: Python scrapy
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
